<resources>
    <string name="app_name">Code Green</string>
    <string name="title_home">Home</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_overview">Weekly Overview</string>
    <string name="title_footprint">Carbon Footprint</string>
    <string name="title_scan">Scan Product</string>
    <string name="title_userprofile">User Profile</string>
    <string name="title_settings">Settings</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_scanner">Scanner</string>
    <string name="menu_scanned">Scanned</string>
    <string name="scan_results">Scan Results</string>
    <string name="a_bus_emits_14_lbs_of_co2_per_100_passenger_miles_a_84_decrease_compared_to_cars">A bus emits 14 lbs of CO2 per 100 passenger miles, a 84% decrease compared to cars</string>
    <string name="you_scanned_a_bus">You Scanned a Bus</string>
    <string name="the_co2_emissions_per_passenger_mile_can_vary_greatly_depending_on_passenger_count_but_for_situations_where_public_transit_is_not_availible_it_can_be_a_good_alternative">The CO2 emissions per passenger mile can vary greatly depending on passenger count but for situations where public transit is not availible it can be a good alternative</string>
    <string name="bicycles_emit_no_co2_per_passenger_mile_and_can_be_a_great_alternative_to_any_form_of_transportation">Bicycles emit no CO2 per passenger mile and can be a great alternative to any form of transportation</string>
</resources>
