<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/ic_baseline_leaderboard_24"
        android:title="@string/title_leaderboard" />

    <item
        android:id="@+id/navigation_overview"
        android:icon="@drawable/ic_baseline_calendar_24"
        android:title="Overview" />

    <item
        android:id="@+id/navigation_footprint"
        android:icon="@drawable/ic_footprint"
        android:title="CO2 Footprint" />

    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/ic_scan"
        android:title="@string/title_scan" />


</menu>